--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
 		<java.version>22</java.version>
 	</properties>
 	<dependencies>
+	
+		<!-- Spring Boot Starter Web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -42,10 +44,16 @@
 		</dependency>
 		
 		<dependency>
-	       <groupId>org.apache.tomcat.embed</groupId>
-	       <artifactId>tomcat-embed-jasper</artifactId>
-	    <!--   <version>10.1.30</version>  -->
-	    </dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.3.5</version>
+		</dependency>
+		
+		<dependency>
+       		<groupId>org.apache.tomcat.embed</groupId>
+       		<artifactId>tomcat-embed-jasper</artifactId>
+       		<!--<version>10.1.30</version>-->
+    	</dependency>
 	    
 	    <dependency>
 	       <groupId>jakarta.servlet.jsp.jstl</groupId>
@@ -56,8 +64,40 @@
 	       <groupId>org.glassfish.web</groupId>
 	       <artifactId>jakarta.servlet.jsp.jstl</artifactId>
 	    </dependency>
-	</dependencies>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		    <version>3.3.4</version>
+		</dependency>
+		
+		
+		<!--This will auto-restart your application on code changes.-->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-devtools</artifactId>
+		    <scope>runtime</scope>
+		    <optional>true</optional>
+		</dependency>
+		
+		
+		<!-- For JPA -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
+		<!--For My SQL -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.33</version>  <!-- Use the latest stable version -->
+		    <scope>runtime</scope>
+		</dependency>
+
+		
+	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
